added ramen combination recipe

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -8,6 +8,55 @@
     </head>
 
     <body>
+        <h1>Ramen Recipe</h1>
+        <img src="img/ramencomplete.jpg" width="300" alt="complete ramen picture with toppings">
+
+        <h3>Description</h3>
+        <p>
+            <em>
+                We are going to prepare the delectable soup noodle dish from Japan: Shio Ramen,
+                using the combination of the last two recipes to finish up the finale. In this 
+                final part of the segment we will add the toppings to the last 3 recipes which will
+                take more time but bring out the best parts of what make good ramen, good ramen.
+            </em>
+        </p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Green Onions</li>
+            <li>Kakuragi Mushrooms</li>
+            <li>Bamboo Shoots</li>
+            <li>Pork Belly</li>
+            <li>Ramen Broth</li>
+            <li>Ramen Noodles</li>
+            <li>Naruto</li>
+            <li>Soy Sauce</li>
+            <li>Salt</li>
+            <li>Pepper</li>
+            <li>Hot sauce of your choice</li>
+        </ul>
+
+        <h3>Supplies</h3>
+        <ul>
+            <li>Ramen bowl</li>
+            <li>Chopsticks</li>
+            <li>Pot</li>
+            <li>Strainer</li>
+            <li>Pan</li>
+            <li>Cutting Board</li>
+        </ul>  
         
+        <h3>Steps</h3>
+        <ol>
+            <li>Take the pot and add water and put on high heat.</li>
+            <li>Take the noodles and boil them to the desired texture, then strain them.</li>
+            <li>Place Ramen broth into the ramen bowl.</li>
+            <li>Carefully place the noodles into the ramen broth/bowl.</li>
+            <li>Take pork belly and cut to small enough chunks while seasoning with salt, pepper, and soy sauce.</li>
+            <li>Prepare the pan by putting seasme oil and heating to a medium temperature before putting on the pork belly.</li>
+            <li>After Pork belly has finished cooking, place into the ramen bowl.</li>
+            <li>Using a cutting board, prepare green onions/naruto/bamboo shoots/kakuragi mushrooms to desired before placing into the bowl.</li>
+            <li>The Ramen is now ready, add hot sauce to soup to your discretation.</li>
+        </ol>
     </body>
 </html>
