added touch ups to main page

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <ol>
+            <li><a href="recipes/ramennoodles.html">Ramen(Egg) Noodles</a></li>
+            <li><a href="recipes/ramenbroth.html">Shio(Salt) Ramen Broth</a></li>
+            <li><a href="recipes/ramen.html">Ramen Combination Recipe</a></li>
+        </ol>
     </body>
 </html>
