--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
         <title>Odin_Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Ramen Recipes Starting From Nothing</h1>
         <h3>By: Lucarioman</h3>
+        <img src="recipes/img/ramencomplete.jpg" width="600" alt="Image of tasty looking ramen">
         <ol>
             <li><a href="recipes/ramennoodles.html">Ramen(Egg) Noodles</a></li>
             <li><a href="recipes/ramenbroth.html">Shio(Salt) Ramen Broth</a></li>
