adding style to recipe lists

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
         <title>Odin_Recipes</title>
     </head>
     <body>
-        <h1>Ramen Recipes Starting From Nothing</h1>
-        <h3>By: Lucarioman</h3>
-        <img src="recipes/img/ramencomplete.jpg" width="600" alt="Image of tasty looking ramen">
+        <h1 class="center">Ramen Recipes Starting From Nothing</h1>
+        <h3 class="center">By: Lucarioman</h3>
+        <img src="recipes/img/ramencomplete.jpg" width="600" alt="Image of tasty looking ramen" class="image">
+        <h3>Different Recipes</h3>
         <ol>
             <li><a href="recipes/ramennoodles.html">Ramen(Egg) Noodles</a></li>
             <li><a href="recipes/ramenbroth.html">Shio(Salt) Ramen Broth</a></li>
