--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -4,15 +4,16 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../style.css">
         <title>Ramen_Recipe</title>
     </head>
 
     <body>
-        <h1>Ramen Recipe</h1>
-        <img src="img/ramencomplete.jpg" width="300" alt="complete ramen picture with toppings">
+        <h1 class="center">Ramen Recipe</h1>
+        <img src="img/ramencomplete.jpg" width="500" alt="complete ramen picture with toppings" class="image">
 
-        <h3>Description</h3>
-        <p>
+        <h3 class="center">Description</h3>
+        <p class="center">
             <em>
                 We are going to prepare the delectable soup noodle dish from Japan: Shio Ramen,
                 using the combination of the last two recipes to finish up the finale. In this 
