--- a/recipes/ramenbroth.html
+++ b/recipes/ramenbroth.html
@@ -4,14 +4,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../style.css">
         <title>Shio_Ramen_Broth</title>
     </head>
     <body>
-        <h1>Shio(Salt) Ramen Broth</h1>
-        <img src="img/ramenbroth.jpg" width="300" alt="Picture of shio ramen">
+        <h1 class="center">Shio(Salt) Ramen Broth</h1>
+        <img src="img/ramenbroth.jpg" width="500" alt="Picture of shio ramen" class="image">
 
-        <h3>Description</h3>
-        <p>
+        <h3 class="center">Description</h3>
+        <p class="center">
             <em>
                 Ever wondered how to make your favorite type of ramen broth for your own use?
                 In this recipe, we will teach you how to create a simple but tasty shio ramen 
