--- a/recipes/ramennoodles.html
+++ b/recipes/ramennoodles.html
@@ -4,14 +4,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../style.css">
         <title>Ramen_Noodles</title>
     </head>
     <body>
-        <h1>Ramen(Egg) Noodles</h1>
-        <img src="img/ramennoodles.jpg" width="300" alt="Ramen noodle pictures">
+        <h1 class="center">Ramen(Egg) Noodles</h1>
+        <img src="img/ramennoodles.jpg" width="500" alt="Ramen noodle pictures" class="image">
 
-        <h3>Description</h3>
-        <em>
+        <h3 class="center">Description</h3>
+        <em class="center">
             This is a recipe to make ramen noodles or egg noodles typically used in thick soup 
             broth without a pasta machine or anything more than the ingredients and your hands.
             The time that it will take to make these noodles is around 1-2 hours, so please plan
